--- a/VideoWeb/VideoWeb/appsettings.json
+++ b/VideoWeb/VideoWeb/appsettings.json
@@ -14,6 +14,16 @@
     "Audience": "kinly.api.endpoints",
     "Issuer": "hmcts.video.hearings.service",
     "ExpiresInMinutes": "480",
-    "HashExpiresInMinutes":  "30" 
+    "HashExpiresInMinutes": "30"
+  },
+  "Authentication": {
+    "AzureAdB2C": {
+      "ClientId": "7a00ed39-469b-4cc6-a1aa-2d7b32c0eed2",
+      "Tenant": "devhearingsreform.onmicrosoft.com",
+      "SignUpSignInPolicyId": "b2c_1a_signup_signin",
+      "ResetPasswordPolicyId": "b2c_1_reset",
+      "EditProfilePolicyId": "b2c_1_edit_profile",
+      "RedirectUri": "https://localhost:5800/signin-oidc"
+    }
   }
 }
