--- a/VideoWeb/VideoWeb/ClientApp/angular.json
+++ b/VideoWeb/VideoWeb/ClientApp/angular.json
@@ -36,7 +36,9 @@
               "src/scripts/pexrtc.js",
               "src/scripts/EdgePF.js",
               "src/scripts/IEPF.js",
-              "src/scripts/Heartbeat.js"
+              "src/scripts/Heartbeat.js",
+              "node_modules/chart.js/dist/chart.js"
+
             ]
           },
           "configurations": {
