--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,40 +1,46 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [{
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (full)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/VideoWeb/VideoWeb/bin/Debug/netcoreapp3.1/VideoWeb.dll",
             "args": [],
             "cwd": "${workspaceFolder}/VideoWeb/VideoWeb/",
             "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+            "internalConsoleOptions": "openOnSessionStart",
+            "launchBrowser": {
+                "enabled": false
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
+                "/Pages": "${workspaceFolder}/VideoWeb/VideoWeb/Pages"
+            },
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "Now listening on",
+                "uriFormat": "https://localhost:5800",
             }
         },
         {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
-        },
-        {
-            "name": "Launch and debug NG",
             "type": "chrome",
+            "preLaunchTask": "ng serve",
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "Angular Live Development Server is listening on localhost:4200",
+            },
             "request": "launch",
+            "name": "Chrome",
             "url": "https://localhost:5800",
             "webRoot": "${workspaceFolder}/VideoWeb/VideoWeb/ClientApp"
-        },
-    ]
+        }
+    ],
+    "compounds": [{
+        "name": "Full stack",
+        "configurations": [".NET Core Launch (full)", "Chrome"]
+    }]
 }
